--- a/views/quizzes/random_play.ejs
+++ b/views/quizzes/random_play.ejs
@@ -3,7 +3,7 @@
 </h1>
 
 <div>
-	Successful	answers	=	<span id="score"><%=	score	%></span>
+	Successful	answers	=	<span id="score"><%=	scoreNormal	%></span>
 </div>
 
 <form	method="get"	action="/quizzes/randomcheck/<%=	quiz.id	%>">
