--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,7 @@
 
     <nav class="main" id="mainNav" role="navigation">
         <a href="/">Home</a>
+        <a href="/users/ranking">Ranking</a>
         <a href="/quizzes/randomplay">Play Normal</a>
         <a href="/quizzes/randomplaymultiple">Play Multiple Choice</a>
         <a href="/quizzes">Quizzes</a>
